<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvNombre"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nombre" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tvApes"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tvNombre"
        app:layout_constraintStart_toStartOf="@+id/tvNombre"
        app:layout_constraintTop_toBottomOf="@+id/tvNombre">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etApes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_apellido" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnInsertar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/bt_insertar"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/tvApes"
        app:layout_constraintTop_toBottomOf="@+id/tvApes" />

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#2196F3"
        android:text="@string/bt_actualizar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btnInsertar"
        app:layout_constraintEnd_toStartOf="@+id/btnEliminar"
        app:layout_constraintStart_toEndOf="@+id/btnInsertar"
        app:layout_constraintTop_toTopOf="@+id/btnInsertar" />

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#F44336"
        android:text="@string/bt_eliminar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/btnActualizar"
        app:layout_constraintEnd_toEndOf="@+id/tvApes"
        app:layout_constraintTop_toTopOf="@+id/btnActualizar" />

    <Button
        android:id="@+id/btnConsultar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="#1DE9B6"
        android:text="@string/bt_consultar"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/btnEliminar"
        app:layout_constraintStart_toStartOf="@+id/btnInsertar"
        app:layout_constraintTop_toBottomOf="@+id/btnActualizar" />


    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="#F0F0F0"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/btnVerListview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnConsultar"
        tools:text="Resultado" />

    <Button
        android:id="@+id/btnVerListview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#1DE9B6"
        android:text="@string/bt_ver_listview"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/btnVerSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResult" />

    <Button
        android:id="@+id/btnVerSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#1DE9B6"
        android:text="@string/bt_ver_spinner"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/btnVerListview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnVerRecyclerView" />

    <Button
        android:id="@+id/btnVerRecyclerView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#1DE9B6"
        android:text="@string/bt_ver_recyclerview"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>